bat.string1.lessons.bat.string1.StringTimes.scala.error
stringTimes:1: error: unclosed character literal
def stringTimes(str:String, n:Int):String = {var s = ''
                                                     ^stringTimes:1: error: illegal start of simple expression
def stringTimes(str:String, n:Int):String = {var s = ''
                                                     ^